--- a/HtpClientAndRestSharp/ConsumeRestApi/ConsumeRestApi.csproj
+++ b/HtpClientAndRestSharp/ConsumeRestApi/ConsumeRestApi.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="ApiServices\HttpClientServices\" />
+    <Folder Include="ApiServices\RestSharpServices\" />
+  </ItemGroup>
+
 </Project>
